--- a/Travelogue.css
+++ b/Travelogue.css
@@ -71,10 +71,9 @@ body {
 }
 
 .tra-about{
-  width: 1300px;
-  padding: 25px;
-  border: 2px black;
-  margin:5px;
+  padding-left: 25px;
+  font-size: 100%;
+  font-size: 2vw;
 }
 
 
