--- a/Travelogue.css
+++ b/Travelogue.css
@@ -24,6 +24,11 @@
 body {
     margin: 2px;
     font-family: Arial;
+    background-image: url("img1.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100%;
+    background-size: cover;
 }
 
 .header {
