--- a/index.css
+++ b/index.css
@@ -30,7 +30,9 @@ body {
 /* Make the image fully responsive */
 .carousel-inner img {
     width: 100%;
-    height: 100%;
+    height: 90%;
+    display: flex;
+    flex-wrap: wrap;
 
 }
 .carousel-indicators li {
