--- a/index.css
+++ b/index.css
@@ -72,6 +72,12 @@ div.abtext{
         font-size: 110%;
     }
 }
+@media (max-width: 200px) {
+    body {
+        font-size: 110%;
+    }
+}
+
 
 
 div.abtext p{
