--- a/index.css
+++ b/index.css
@@ -30,11 +30,31 @@ body {
 /* Make the image fully responsive */
 .carousel-inner img {
     width: 100%;
-    height: 100%;
+    height: 450px;
     display: flex;
     flex-wrap: wrap;
 
 }
+@media (max-width: 899px) {
+    body {
+      width: 100%;
+      height: 400px;
+    }
+}
+
+@media (max-width: 480px) {
+    body {
+      width: 100%;
+      height: 350px;
+    }
+}
+@media (max-width: 200px) {
+    body {
+      width: 100%;
+      height: 300px;
+    }
+}
+
 .carousel-indicators li {
   width: 10px;
   height: 10px;
@@ -74,7 +94,7 @@ div.abtext{
 }
 @media (max-width: 200px) {
     body {
-        font-size: 110%;
+        font-size: 90%;
     }
 }
 
