--- a/index.css
+++ b/index.css
@@ -18,7 +18,6 @@
 }
 body {
     margin: 2px;
-
     font-family: Arial;
     background-image: url("img1.jpg");
     background-repeat: no-repeat;
@@ -28,31 +27,36 @@ body {
 }
 
 /* Make the image fully responsive */
+.carousel slide {
+    width: auto;
+
+    height: 450px;
+}
 .carousel-inner img {
     width: 100%;
-    height: 450px;
-    display: flex;
-    flex-wrap: wrap;
-
-}
-@media (max-width: 899px) {
-    body {
-      width: 100%;
-      height: 450px;
-    }
+    margin-top: 50px;
+    height: 300px;
 }
 
-@media (max-width: 480px) {
-    body {
-      width: 100%;
-      height: 525px;
+@media screen and (max-width: 1000px) {
+    .carousel-inner {
+
+      max-width: auto;
+      max-height: 450px;
     }
 }
-@media (max-width: 200px) {
-    body {
-      width: 100%;
-      height: 450px;
+@media screen and (max-width: 400px) {
+    .carousel slide {
+
+        max-width: 100%;
+        max-height: 200px;
     }
+}
+
+
+
+.carousel-inner p{
+  font-size: 0.75vw;
 }
 
 .carousel-indicators li {
@@ -79,25 +83,6 @@ div.abtext{
   font-size: 175.5%;
     line-height: 1.4;
   }
-
-
-@media (max-width: 899px) {
-    body {
-        font-size: 123.75%;
-    }
-}
-
-@media (max-width: 480px) {
-    body {
-        font-size: 110%;
-    }
-}
-@media (max-width: 200px) {
-    body {
-        font-size: 80%;
-    }
-}
-
 
 
 div.abtext p{
