--- a/details.css
+++ b/details.css
@@ -294,7 +294,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    height: 1000px;
+    height: auto;
 }
 
 div.abtext{
