--- a/details.css
+++ b/details.css
@@ -293,7 +293,8 @@ body {
     background-image: url("img1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100%auto ;
+    background-size: cover ;
+    height: 100%;
 
 }
 
