--- a/details.css
+++ b/details.css
@@ -247,7 +247,7 @@ body {
     background-image: url("img1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-
+height: 100%;
     background-size: cover;
 }
 
