--- a/details.css
+++ b/details.css
@@ -15,6 +15,12 @@
 @media screen and (max-width: 800px) {
     .insta {
 
+      padding-top: 50px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .insta {
+
       padding-top: 0px;
     }
 }
