--- a/details.css
+++ b/details.css
@@ -4,27 +4,67 @@
   height:100px;
 }
 
-.insta{
+/*.insta{
   padding-top: 150px;
   display: flex;
   flex-flow: row wrap;
   justify-content :space-around;
   flex-wrap: wrap;
 }
+*/
+.instarow {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+    padding-left: 50px;
+    padding-top: 100px;
+}
 
+@media screen and (max-width:800px) {
+  .instarow{
+    padding-top: 0px;
+  }
+}
+@media screen and (max-width:600px) {
+  .instarow{
+    padding-top: 0px;
+  }
+}
+/* Create four equal columns that sits next to each other */
+.colu {
+    -ms-flex: 25%; /* IE10 */
+    flex: 25%;
+    max-width: 33%;
+    padding: 0 4px;
+}
+
+.colu img {
+    margin-top: 8px;
+    vertical-align: middle;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
-    .insta {
+    .colu {
+        -ms-flex: 50%;
+        flex: 50%;
+        max-width: 50%;
+        padding-left: 50px;
 
-      padding-top: 50px;
     }
 }
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-    .insta {
+    .colu {
+        -ms-flex: 100%;
+        flex: 100%;
+        max-width: 100%;
 
-      padding-top: 0px;
     }
 }
-
 
 
 .navbar-nav li:hover > ul.dropdown-menu {
