--- a/details.css
+++ b/details.css
@@ -3,15 +3,12 @@
   width: 100px;
   height:100px;
 }
-
-/*.insta{
-  padding-top: 150px;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content :space-around;
-  flex-wrap: wrap;
+.header {
+    text-align: center;
+    padding: 32px;
 }
-*/
+
+
 .instarow {
     display: -ms-flexbox; /* IE10 */
     display: flex;
@@ -25,11 +22,13 @@
 @media screen and (max-width:800px) {
   .instarow{
     padding-top: 0px;
+    padding-left: 0px;
   }
 }
 @media screen and (max-width:600px) {
   .instarow{
     padding-top: 0px;
+    padding-left: 0px;
   }
 }
 /* Create four equal columns that sits next to each other */
@@ -101,7 +100,7 @@ body {
     left: 0;
     bottom: 0;
     height: 50px;
-    line-height: 25px;
+    line-height: 50px;
     width: 100%;
     background-color:#343a40;
     background-size: 100% 100%;
