--- a/details.css
+++ b/details.css
@@ -42,6 +42,7 @@
 .colu img {
     margin-top: 8px;
     vertical-align: middle;
+    padding-left: 0px;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
